<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    app:chainUseRtl="false"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="-96dp"
    tools:layout_editor_absoluteY="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="433dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="407dp"
            android:layout_height="444dp"
            android:scaleX="1.1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/hotel3" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/white"
            app:icon="@drawable/left"
            app:iconGravity="top"
            app:iconSize="32dp"
            app:iconTint="#0B0A0A"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/dots3Button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/white"
            android:shadowColor="@color/white"
            app:icon="@drawable/dots3"
            app:iconGravity="top"
            app:iconSize="32dp"
            app:iconTint="#0B0A0A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="@color/white"
            app:strokeColor="@color/white" />

        <com.google.android.material.chip.Chip
            android:id="@+id/locationChip"
            style="@style/Widget.Material3.Chip.Assist.Elevated"
            android:layout_width="156dp"
            android:layout_height="53dp"
            android:layout_marginTop="8dp"

            android:background="@color/white"
            android:text="@string/location"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/yaziRenk"
            app:chipIcon="@drawable/gdansk_logo"
            app:chipIconEnabled="true"
            app:chipIconSize="18dp"
            app:chipIconVisible="true"
            app:layout_constraintEnd_toStartOf="@+id/dots3Button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/backButton"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/benefit1"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@color/anaRenk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/benefitText"
        app:srcCompat="@drawable/benefit1" />

    <ImageView
        android:id="@+id/benefit4"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/anaRenk"
        app:layout_constraintStart_toEndOf="@+id/benefit3"
        app:layout_constraintTop_toBottomOf="@+id/benefitText"
        app:srcCompat="@drawable/benefit4" />

    <ImageView
        android:id="@+id/benefit2"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/anaRenk"
        app:layout_constraintStart_toEndOf="@+id/benefit1"
        app:layout_constraintTop_toBottomOf="@+id/benefitText"
        app:srcCompat="@drawable/benefit2" />

    <TextView
        android:id="@+id/benefitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:elevation="8dp"
        android:fontFamily="@font/merriweather_light"
        android:text="@string/benefits"
        android:textColor="@color/yaziRenk"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/benefit1"
        app:layout_constraintTop_toBottomOf="@+id/hotelText" />

    <TextView
        android:id="@+id/instName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:elevation="8dp"
        android:fontFamily="@font/merriweather_light"
        android:text="Ahmet Erdem"
        android:textColor="@color/yaziRenk"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/instPhoto"
        app:layout_constraintTop_toTopOf="@+id/instPhoto" />

    <TextView
        android:id="@+id/instText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:elevation="8dp"
        android:fontFamily="@font/merriweather_light"
        android:text="@string/instr"
        android:textColor="@color/yaziRenk2"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/instName"
        app:layout_constraintTop_toBottomOf="@+id/instName" />

    <TextView
        android:id="@+id/reviewText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/merriweather_light"
        android:text="@string/review"
        android:textColor="@color/yaziRenk2"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ratingText"
        app:layout_constraintTop_toBottomOf="@+id/hotelNameText" />

    <TextView
        android:id="@+id/dayText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/merriweather_light"
        android:text="@string/day"
        android:textAllCaps="false"
        android:textColor="#F44336"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/priceText"
        app:layout_constraintTop_toTopOf="@+id/priceText" />

    <TextView
        android:id="@+id/priceText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="56dp"
        android:fontFamily="@font/merriweather_light"
        android:text="@string/price"
        android:textColor="@color/yaziRenk"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <TextView
        android:id="@+id/hotelNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/merriweather_light"
        android:text="@string/hotel_name"
        android:textColor="@color/yaziRenk"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:numStars="5"
        android:progressTint="@color/yaziRenk"
        android:rating="4.5"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintStart_toStartOf="@+id/hotelNameText"
        app:layout_constraintTop_toBottomOf="@+id/hotelNameText" />

    <TextView
        android:id="@+id/ratingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/merriweather_light"
        android:text="4.8"
        android:textColor="@color/yaziRenk"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ratingBar"
        app:layout_constraintTop_toTopOf="@+id/ratingBar" />

    <com.google.android.material.chip.Chip
        android:id="@+id/instChip"
        android:layout_width="330dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:elevation="0dp"
        app:chipStrokeColor="#C8C8C8"
        app:chipSurfaceColor="@color/anaRenk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reviewText" />

    <ImageView
        android:id="@+id/instPhoto"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/instChip"
        app:layout_constraintStart_toStartOf="@+id/instChip"
        app:layout_constraintTop_toTopOf="@+id/instChip"
        app:srcCompat="@drawable/instructor" />

    <TextView
        android:id="@+id/hotelText"
        android:layout_width="347dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/merriweather_light"
        android:text="@string/hotel_description"
        android:textColor="@color/yaziRenk2"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instChip" />

    <ImageView
        android:id="@+id/benefit3"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/anaRenk"
        app:layout_constraintStart_toEndOf="@+id/benefit2"
        app:layout_constraintTop_toBottomOf="@+id/benefitText"
        app:srcCompat="@drawable/benefit3" />

    <Button
        android:id="@+id/bookButton"
        android:layout_width="317dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/sBarRenk"
        android:fontFamily="@font/merriweather_light"
        android:text="@string/book"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/benefit4" />

</androidx.constraintlayout.widget.ConstraintLayout>